	* make files deleted alert non-discardable
	* make built-in sha functions not conflict with libcrypto
	* improve web seed hash failure case
	* improve DHT lookup times
	* uTP path MTU discovery improvements
	* optimized the torrent creator optimizer to scale significantly better with more files
	* fix uTP edge case where udp socket buffer fills up
	* fix nagle implementation in uTP

	* fix typo in Jamfile for building shared libraries
	* prevent tracker exchange for magnet links before metadata is received
	* fix crash in make_magnet_uri when generating links longer than 1024 characters
	* fix hanging issue when closing files on windows (completing a download)
	* fix piece picking edge case that could cause torrents to get stuck at hash failure
	* try unencrypted connections first, and fall back to encryption if it fails (performance improvement)
	* add missing functions to python binding (flush_cache(), remap_files() and orig_files())
	* improve handling of filenames that are invalid on windows
	* support 'implied_port' in DHT announce_peer
	* don't use pool allocator for disk blocks (cache may now return pages to the kernel)

0.16.9 release

	* fix long filename truncation on windows
	* distinguish file open mode when checking files and downloading/seeding with bittorrent. updates storage interface
	* improve file_storage::map_file when dealing with invalid input
	* improve handling of invalid utf-8 sequences in strings in torrent files
	* handle more cases of broken .torrent files
	* fix bug filename collision resolver
	* fix bug in filename utf-8 verification
	* make need_save_resume() a bit more robust
	* fixed sparse flag manipulation on windows
	* fixed streaming piece picking issue

0.16.8 release

	* make rename_file create missing directories for new filename
	* added missing python function: parse_magnet_uri
	* fix alerts.all_categories in python binding
	* fix torrent-abort issue which would cancel name lookups of other torrents